include $(top_builddir)/Make.common

AUTOMAKE_OPTIONS = subdir-objects 

SUBDIRS =           # none, append below

AM_CPPFLAGS = $(libmesh_CPPFLAGS)
AM_CFLAGS   = $(libmesh_CFLAGS)
AM_CXXFLAGS = $(libmesh_CXXFLAGS)

INCLUDES = $(libmesh_INCLUDE)

# A convenience library to hold proper libMesh 
# objects.  This will get appended with any contributed 
# sources to create the final library.
noinst_LTLIBRARIES = libmesh_local.la

#libmesh_local_la_CPPFLAGS = $(libmesh_CPPFLAGS)
#libmesh_local_la_CXXFLAGS = $(libmesh_CXXFLAGS)
#libmesh_local_la_CFLAGS   = $(libmesh_CFLAGS)

libmesh_local_la_SOURCES = \
		base/dof_map.C \
		base/dof_map_constraints.C \
		base/dof_object.C \
		base/libmesh.C \
		base/libmesh_isnan.c \
		base/print_trace.C \
		base/reference_counted_object.C \
		base/reference_counter.C \
		error_estimation/adjoint_refinement_estimator.C \
		error_estimation/adjoint_residual_error_estimator.C \
		error_estimation/discontinuity_measure.C \
		error_estimation/error_estimator.C \
		error_estimation/exact_error_estimator.C \
		error_estimation/exact_solution.C \
		error_estimation/fourth_error_estimators.C \
		error_estimation/hp_coarsentest.C \
		error_estimation/hp_selector.C \
		error_estimation/hp_singular.C \
		error_estimation/jump_error_estimator.C \
		error_estimation/kelly_error_estimator.C \
		error_estimation/patch_recovery_error_estimator.C \
		error_estimation/uniform_refinement_estimator.C \
		fe/fe.C \
		fe/fe_base.C \
		fe/fe_bernstein.C \
		fe/fe_bernstein_shape_0D.C \
		fe/fe_bernstein_shape_1D.C \
		fe/fe_bernstein_shape_2D.C \
		fe/fe_bernstein_shape_3D.C \
		fe/fe_boundary.C \
		fe/fe_clough.C \
		fe/fe_clough_shape_0D.C \
		fe/fe_clough_shape_1D.C \
		fe/fe_clough_shape_2D.C \
		fe/fe_clough_shape_3D.C \
		fe/fe_compute_data.C \
		fe/fe_hermite.C \
		fe/fe_hermite_shape_0D.C \
		fe/fe_hermite_shape_1D.C \
		fe/fe_hermite_shape_2D.C \
		fe/fe_hermite_shape_3D.C \
		fe/fe_hierarchic.C \
		fe/fe_hierarchic_shape_0D.C \
		fe/fe_hierarchic_shape_1D.C \
		fe/fe_hierarchic_shape_2D.C \
		fe/fe_hierarchic_shape_3D.C \
		fe/fe_interface.C \
		fe/fe_interface_inf_fe.C \
		fe/fe_l2_hierarchic.C \
		fe/fe_l2_hierarchic_shape_0D.C \
		fe/fe_l2_hierarchic_shape_1D.C \
		fe/fe_l2_hierarchic_shape_2D.C \
		fe/fe_l2_hierarchic_shape_3D.C \
		fe/fe_lagrange.C \
		fe/fe_lagrange_shape_0D.C \
		fe/fe_lagrange_shape_1D.C \
		fe/fe_lagrange_shape_2D.C \
		fe/fe_lagrange_shape_3D.C \
		fe/fe_map.C \
		fe/fe_monomial.C \
		fe/fe_monomial_shape_0D.C \
		fe/fe_monomial_shape_1D.C \
		fe/fe_monomial_shape_2D.C \
		fe/fe_monomial_shape_3D.C \
		fe/fe_scalar.C \
		fe/fe_scalar_shape_0D.C \
		fe/fe_scalar_shape_1D.C \
		fe/fe_scalar_shape_2D.C \
		fe/fe_scalar_shape_3D.C \
		fe/fe_szabab.C \
		fe/fe_szabab_shape_0D.C \
		fe/fe_szabab_shape_1D.C \
		fe/fe_szabab_shape_2D.C \
		fe/fe_szabab_shape_3D.C \
		fe/fe_type.C \
		fe/fe_xyz.C \
		fe/fe_xyz_boundary.C \
		fe/fe_xyz_shape_0D.C \
		fe/fe_xyz_shape_1D.C \
		fe/fe_xyz_shape_2D.C \
		fe/fe_xyz_shape_3D.C \
		fe/inf_fe.C \
		fe/inf_fe_base_radial.C \
		fe/inf_fe_boundary.C \
		fe/inf_fe_jacobi_20_00_eval.C \
		fe/inf_fe_jacobi_30_00_eval.C \
		fe/inf_fe_lagrange_eval.C \
		fe/inf_fe_legendre_eval.C \
		fe/inf_fe_map.C \
		fe/inf_fe_map_eval.C \
		fe/inf_fe_static.C \
		geom/cell.C \
		geom/cell_hex.C \
		geom/cell_hex20.C \
		geom/cell_hex27.C \
		geom/cell_hex8.C \
		geom/cell_inf.C \
		geom/cell_inf_hex.C \
		geom/cell_inf_hex16.C \
		geom/cell_inf_hex18.C \
		geom/cell_inf_hex8.C \
		geom/cell_inf_prism.C \
		geom/cell_inf_prism12.C \
		geom/cell_inf_prism6.C \
		geom/cell_prism.C \
		geom/cell_prism15.C \
		geom/cell_prism18.C \
		geom/cell_prism6.C \
		geom/cell_pyramid.C \
		geom/cell_pyramid5.C \
		geom/cell_tet.C \
		geom/cell_tet10.C \
		geom/cell_tet4.C \
		geom/edge.C \
		geom/edge_edge2.C \
		geom/edge_edge3.C \
		geom/edge_edge4.C \
		geom/edge_inf_edge2.C \
		geom/elem.C \
		geom/elem_quality.C \
		geom/elem_refinement.C \
		geom/elem_type.C \
		geom/face.C \
		geom/face_inf_quad.C \
		geom/face_inf_quad4.C \
		geom/face_inf_quad6.C \
		geom/face_quad.C \
		geom/face_quad4.C \
		geom/face_quad8.C \
		geom/face_quad9.C \
		geom/face_tri.C \
		geom/face_tri3.C \
		geom/face_tri6.C \
		geom/node.C \
		geom/node_elem.C \
		geom/plane.C \
		geom/point.C \
		geom/remote_elem.C \
		geom/sphere.C \
		geom/surface.C \
		mesh/abaqus_io.C \
		mesh/boundary_info.C \
		mesh/boundary_mesh.C \
		mesh/diva_io.C \
		mesh/ensight_io.C \
		mesh/exodusII_io.C \
		mesh/exodusII_io_helper.C \
		mesh/fro_io.C \
		mesh/gmsh_io.C \
		mesh/gmv_io.C \
		mesh/gnuplot_io.C \
		mesh/inf_elem_builder.C \
		mesh/legacy_xdr_io.C \
		mesh/matlab_io.C \
		mesh/medit_io.C \
		mesh/mesh_base.C \
		mesh/mesh_communication.C \
		mesh/mesh_communication_global_indices.C \
		mesh/mesh_data.C \
		mesh/mesh_data_tetgen_support.C \
		mesh/mesh_data_unv_support.C \
		mesh/mesh_data_xdr_support.C \
		mesh/mesh_function.C \
		mesh/mesh_generation.C \
		mesh/mesh_modification.C \
		mesh/mesh_output.C \
		mesh/mesh_refinement.C \
		mesh/mesh_refinement_flagging.C \
		mesh/mesh_refinement_smoothing.C \
		mesh/mesh_serializer.C \
		mesh/mesh_smoother.C \
		mesh/mesh_smoother_laplace.C \
		mesh/mesh_smoother_vsmoother.C \
		mesh/mesh_tetgen_interface.C \
		mesh/mesh_tetgen_wrapper.C \
		mesh/mesh_tools.C \
		mesh/mesh_triangle_holes.C \
		mesh/mesh_triangle_interface.C \
		mesh/mesh_triangle_wrapper.C \
		mesh/nemesis_io.C \
		mesh/nemesis_io_helper.C \
		mesh/off_io.C \
		mesh/parallel_mesh.C \
		mesh/parallel_mesh_iterators.C \
		mesh/patch.C \
		mesh/postscript_io.C \
		mesh/serial_mesh.C \
		mesh/serial_mesh_iterators.C \
		mesh/tecplot_io.C \
		mesh/tetgen_io.C \
		mesh/ucd_io.C \
		mesh/unstructured_mesh.C \
		mesh/unv_io.C \
		mesh/vtk_io.C \
		mesh/xdr_head.C \
		mesh/xdr_io.C \
		mesh/xdr_mesh.C \
		mesh/xdr_mgf.C \
		mesh/xdr_soln.C \
		numerics/analytic_function.C \
		numerics/coupling_matrix.C \
		numerics/dense_matrix.C \
		numerics/dense_matrix_base.C \
		numerics/dense_matrix_blas_lapack.C \
		numerics/dense_submatrix.C \
		numerics/dense_subvector.C \
		numerics/dense_vector.C \
		numerics/dense_vector_base.C \
		numerics/distributed_vector.C \
		numerics/function_base.C \
		numerics/laspack_matrix.C \
		numerics/laspack_vector.C \
		numerics/numeric_vector.C \
		numerics/petsc_matrix.C \
		numerics/petsc_preconditioner.C \
		numerics/petsc_vector.C \
		numerics/preconditioner.C \
		numerics/sparse_matrix.C \
		numerics/sparse_shell_matrix.C \
		numerics/sum_shell_matrix.C \
		numerics/tensor_shell_matrix.C \
		numerics/trilinos_epetra_matrix.C \
		numerics/trilinos_epetra_vector.C \
		numerics/trilinos_preconditioner.C \
		numerics/type_tensor.C \
		numerics/type_vector.C \
		parallel/parallel_bin_sorter.C \
		parallel/parallel_histogram.C \
		parallel/parallel_sort.C \
		parallel/threads.C \
		partitioning/centroid_partitioner.C \
		partitioning/linear_partitioner.C \
		partitioning/metis_partitioner.C \
		partitioning/parmetis_partitioner.C \
		partitioning/partitioner.C \
		partitioning/partitioner_factory.C \
		partitioning/sfc_partitioner.C \
		physics/diff_physics.C \
		physics/diff_qoi.C \
		quadrature/quadrature.C \
		quadrature/quadrature_build.C \
		quadrature/quadrature_clough.C \
		quadrature/quadrature_clough_1D.C \
		quadrature/quadrature_clough_2D.C \
		quadrature/quadrature_clough_3D.C \
		quadrature/quadrature_conical.C \
		quadrature/quadrature_conical_2D.C \
		quadrature/quadrature_conical_3D.C \
		quadrature/quadrature_gauss.C \
		quadrature/quadrature_gauss_1D.C \
		quadrature/quadrature_gauss_2D.C \
		quadrature/quadrature_gauss_3D.C \
		quadrature/quadrature_gm.C \
		quadrature/quadrature_gm_3D.C \
		quadrature/quadrature_grid.C \
		quadrature/quadrature_grid_1D.C \
		quadrature/quadrature_grid_2D.C \
		quadrature/quadrature_grid_3D.C \
		quadrature/quadrature_jacobi.C \
		quadrature/quadrature_jacobi_1D.C \
		quadrature/quadrature_monomial.C \
		quadrature/quadrature_monomial_2D.C \
		quadrature/quadrature_monomial_3D.C \
		quadrature/quadrature_rules.C \
		quadrature/quadrature_simpson.C \
		quadrature/quadrature_simpson_1D.C \
		quadrature/quadrature_simpson_2D.C \
		quadrature/quadrature_simpson_3D.C \
		quadrature/quadrature_trap.C \
		quadrature/quadrature_trap_1D.C \
		quadrature/quadrature_trap_2D.C \
		quadrature/quadrature_trap_3D.C \
		reduced_basis/derived_rb_construction.C \
		reduced_basis/derived_rb_evaluation.C \
		reduced_basis/rb_assembly_expansion.C \
		reduced_basis/rb_construction.C \
		reduced_basis/rb_construction_base.C \
		reduced_basis/rb_eim_construction.C \
		reduced_basis/rb_eim_evaluation.C \
		reduced_basis/rb_evaluation.C \
		reduced_basis/rb_param_subdomain_node.C \
		reduced_basis/rb_param_subdomain_tree.C \
		reduced_basis/rb_parametrized_object.C \
		reduced_basis/rb_scm_construction.C \
		reduced_basis/rb_scm_evaluation.C \
		reduced_basis/rb_theta_expansion.C \
		reduced_basis/steady_derived_rb_construction.C \
		reduced_basis/transient_rb_assembly_expansion.C \
		reduced_basis/transient_rb_construction.C \
		reduced_basis/transient_rb_evaluation.C \
		reduced_basis/transient_rb_param_subdomain_node.C \
		reduced_basis/transient_rb_param_subdomain_tree.C \
		reduced_basis/transient_rb_theta_expansion.C \
		solvers/adaptive_time_solver.C \
		solvers/diff_solver.C \
		solvers/eigen_solver.C \
		solvers/eigen_time_solver.C \
		solvers/euler2_solver.C \
		solvers/euler_solver.C \
		solvers/laspack_linear_solver.C \
		solvers/linear_solver.C \
		solvers/newton_solver.C \
		solvers/nonlinear_solver.C \
		solvers/petsc_diff_solver.C \
		solvers/petsc_linear_solver.C \
		solvers/petsc_nonlinear_solver.C \
		solvers/slepc_eigen_solver.C \
		solvers/steady_solver.C \
		solvers/time_solver.C \
		solvers/trilinos_aztec_linear_solver.C \
		solvers/trilinos_nox_nonlinear_solver.C \
		solvers/twostep_time_solver.C \
		solvers/unsteady_solver.C \
		systems/condensed_eigen_system.C \
		systems/continuation_system.C \
		systems/diff_context.C \
		systems/diff_system.C \
		systems/eigen_system.C \
		systems/equation_systems.C \
		systems/equation_systems_io.C \
		systems/explicit_system.C \
		systems/fem_context.C \
		systems/fem_system.C \
		systems/frequency_system.C \
		systems/implicit_system.C \
		systems/linear_implicit_system.C \
		systems/newmark_system.C \
		systems/nonlinear_implicit_system.C \
		systems/parameter_vector.C \
		systems/qoi_set.C \
		systems/steady_system.C \
		systems/system.C \
		systems/system_io.C \
		systems/system_projection.C \
		systems/system_subset.C \
		systems/system_subset_by_subdomain.C \
		systems/transient_system.C \
		utils/error_vector.C \
		utils/hashword.C \
		utils/location_maps.C \
		utils/number_lookups.C \
		utils/o_f_stream.C \
		utils/perf_log.C \
		utils/plt_loader.C \
		utils/plt_loader_read.C \
		utils/plt_loader_write.C \
		utils/point_locator_base.C \
		utils/point_locator_list.C \
		utils/point_locator_tree.C \
		utils/statistics.C \
		utils/string_to_enum.C \
		utils/timestamp.C \
		utils/tree.C \
		utils/tree_node.C \
		utils/utility.C \
		utils/xdr_cxx.C 

