#includedir = $(prefix)/include/libmesh


# These are the headers we actually want to install and make available
if LIBMESH_INSTALL_INTERNAL_BOOST
  nobase_include_HEADERS = \
        boost/assert.hpp \
        boost/config.hpp \
        boost/config/user.hpp \
        boost/config/select_compiler_config.hpp \
        boost/config/compiler/gcc.hpp \
        boost/config/select_stdlib_config.hpp \
        boost/config/no_tr1/utility.hpp \
        boost/config/stdlib/libstdcpp3.hpp \
        boost/config/select_platform_config.hpp \
        boost/config/platform/macos.hpp \
        boost/config/posix_features.hpp \
        boost/config/suffix.hpp \
        boost/current_function.hpp \
        boost/checked_delete.hpp \
        boost/memory_order.hpp \
        boost/shared_ptr.hpp \
        boost/smart_ptr/shared_ptr.hpp \
        boost/config/no_tr1/memory.hpp \
        boost/throw_exception.hpp \
        boost/exception/detail/attribute_noreturn.hpp \
        boost/detail/workaround.hpp \
        boost/exception/exception.hpp \
        boost/smart_ptr/detail/shared_count.hpp \
        boost/smart_ptr/bad_weak_ptr.hpp \
        boost/smart_ptr/detail/sp_counted_base.hpp \
        boost/smart_ptr/detail/sp_has_sync.hpp \
        boost/smart_ptr/detail/sp_counted_base_gcc_x86.hpp \
        boost/detail/sp_typeinfo.hpp \
        boost/smart_ptr/detail/sp_counted_impl.hpp \
        boost/smart_ptr/detail/sp_convertible.hpp \
        boost/smart_ptr/detail/sp_nullptr_t.hpp \
        boost/smart_ptr/detail/spinlock_pool.hpp \
        boost/smart_ptr/detail/spinlock.hpp \
        boost/smart_ptr/detail/spinlock_sync.hpp \
        boost/smart_ptr/detail/yield_k.hpp \
        boost/smart_ptr/detail/operator_bool.hpp \
        boost/pool/poolfwd.hpp \
        boost/pool/detail/mutex.hpp \
        boost/thread/mutex.hpp \
        boost/pool/pool.hpp \
        boost/math/common_factor_ct.hpp \
        boost/math_fwd.hpp \
        boost/cstdint.hpp \
        boost/mpl/integral_c.hpp \
        boost/mpl/integral_c_fwd.hpp \
        boost/mpl/aux_/config/workaround.hpp \
        boost/mpl/aux_/adl_barrier.hpp \
        boost/mpl/aux_/config/adl.hpp \
        boost/mpl/aux_/config/msvc.hpp \
        boost/mpl/aux_/config/intel.hpp \
        boost/mpl/aux_/config/gcc.hpp \
        boost/mpl/aux_/config/ctps.hpp \
        boost/mpl/aux_/config/static_constant.hpp \
        boost/mpl/aux_/integral_wrapper.hpp \
        boost/mpl/integral_c_tag.hpp \
        boost/mpl/aux_/static_cast.hpp \
        boost/mpl/aux_/nttp_decl.hpp \
        boost/mpl/aux_/config/nttp.hpp \
        boost/preprocessor/cat.hpp \
        boost/preprocessor/config/config.hpp \
        boost/pool/simple_segregated_storage.hpp \
        boost/type_traits/alignment_of.hpp \
        boost/type_traits/intrinsics.hpp \
        boost/type_traits/config.hpp \
        boost/type_traits/is_same.hpp \
        boost/type_traits/detail/bool_trait_def.hpp \
        boost/type_traits/detail/template_arity_spec.hpp \
        boost/mpl/int.hpp \
        boost/mpl/int_fwd.hpp \
        boost/mpl/aux_/template_arity_fwd.hpp \
        boost/mpl/aux_/preprocessor/params.hpp \
        boost/mpl/aux_/config/preprocessor.hpp \
        boost/preprocessor/comma_if.hpp \
        boost/preprocessor/punctuation/comma_if.hpp \
        boost/preprocessor/control/if.hpp \
        boost/preprocessor/control/iif.hpp \
        boost/preprocessor/logical/bool.hpp \
        boost/preprocessor/facilities/empty.hpp \
        boost/preprocessor/punctuation/comma.hpp \
        boost/preprocessor/repeat.hpp \
        boost/preprocessor/repetition/repeat.hpp \
        boost/preprocessor/debug/error.hpp \
        boost/preprocessor/detail/auto_rec.hpp \
        boost/preprocessor/tuple/eat.hpp \
        boost/preprocessor/inc.hpp \
        boost/preprocessor/arithmetic/inc.hpp \
        boost/mpl/aux_/config/lambda.hpp \
        boost/mpl/aux_/config/ttp.hpp \
        boost/mpl/aux_/config/overload_resolution.hpp \
        boost/type_traits/integral_constant.hpp \
        boost/mpl/bool.hpp \
        boost/mpl/bool_fwd.hpp \
        boost/mpl/aux_/lambda_support.hpp \
        boost/type_traits/detail/bool_trait_undef.hpp \
        boost/type_traits/is_reference.hpp \
        boost/type_traits/is_lvalue_reference.hpp \
        boost/type_traits/is_rvalue_reference.hpp \
        boost/type_traits/ice.hpp \
        boost/type_traits/detail/yes_no_type.hpp \
        boost/type_traits/detail/ice_or.hpp \
        boost/type_traits/detail/ice_and.hpp \
        boost/type_traits/detail/ice_not.hpp \
        boost/type_traits/detail/ice_eq.hpp \
        boost/type_traits/is_volatile.hpp \
        boost/type_traits/detail/cv_traits_impl.hpp \
        boost/type_traits/detail/size_t_trait_def.hpp \
        boost/mpl/size_t.hpp \
        boost/mpl/size_t_fwd.hpp \
        boost/type_traits/detail/size_t_trait_undef.hpp \
        boost/pool/pool_alloc.hpp \
        boost/limits.hpp \
        boost/pool/singleton_pool.hpp \
        boost/pool/detail/guard.hpp \
        boost/type_traits/aligned_storage.hpp \
        boost/aligned_storage.hpp \
        boost/type_traits/type_with_alignment.hpp \
        boost/mpl/if.hpp \
        boost/mpl/aux_/value_wknd.hpp \
        boost/mpl/aux_/config/integral.hpp \
        boost/mpl/aux_/config/eti.hpp \
        boost/mpl/aux_/na_spec.hpp \
        boost/mpl/lambda_fwd.hpp \
        boost/mpl/void_fwd.hpp \
        boost/mpl/aux_/na.hpp \
        boost/mpl/aux_/na_fwd.hpp \
        boost/mpl/aux_/lambda_arity_param.hpp \
        boost/mpl/aux_/arity.hpp \
        boost/mpl/aux_/config/dtp.hpp \
        boost/mpl/aux_/preprocessor/enum.hpp \
        boost/mpl/aux_/preprocessor/def_params_tail.hpp \
        boost/mpl/limits/arity.hpp \
        boost/preprocessor/logical/and.hpp \
        boost/preprocessor/logical/bitand.hpp \
        boost/preprocessor/identity.hpp \
        boost/preprocessor/facilities/identity.hpp \
        boost/preprocessor/empty.hpp \
        boost/preprocessor/arithmetic/add.hpp \
        boost/preprocessor/arithmetic/dec.hpp \
        boost/preprocessor/control/while.hpp \
        boost/preprocessor/list/fold_left.hpp \
        boost/preprocessor/list/detail/fold_left.hpp \
        boost/preprocessor/control/expr_iif.hpp \
        boost/preprocessor/list/adt.hpp \
        boost/preprocessor/detail/is_binary.hpp \
        boost/preprocessor/detail/check.hpp \
        boost/preprocessor/logical/compl.hpp \
        boost/preprocessor/list/fold_right.hpp \
        boost/preprocessor/list/detail/fold_right.hpp \
        boost/preprocessor/list/reverse.hpp \
        boost/preprocessor/control/detail/while.hpp \
        boost/preprocessor/tuple/elem.hpp \
        boost/preprocessor/facilities/overload.hpp \
        boost/preprocessor/variadic/size.hpp \
        boost/preprocessor/tuple/rem.hpp \
        boost/preprocessor/variadic/elem.hpp \
        boost/preprocessor/arithmetic/sub.hpp \
        boost/preprocessor/list/for_each_i.hpp \
        boost/preprocessor/repetition/for.hpp \
        boost/preprocessor/repetition/detail/for.hpp \
        boost/preprocessor/tuple/to_list.hpp \
        boost/preprocessor/list/transform.hpp \
        boost/preprocessor/list/append.hpp \
        boost/type_traits/is_pod.hpp \
        boost/type_traits/is_void.hpp \
        boost/type_traits/is_scalar.hpp \
        boost/type_traits/is_arithmetic.hpp \
        boost/type_traits/is_integral.hpp \
        boost/type_traits/is_float.hpp \
        boost/type_traits/is_enum.hpp \
        boost/type_traits/is_pointer.hpp \
        boost/type_traits/is_member_pointer.hpp \
        boost/type_traits/is_member_function_pointer.hpp \
        boost/type_traits/detail/is_mem_fun_pointer_impl.hpp \
        boost/type_traits/remove_cv.hpp \
        boost/type_traits/broken_compiler_spec.hpp \
        boost/type_traits/detail/type_trait_def.hpp \
        boost/type_traits/detail/type_trait_undef.hpp \
        boost/static_assert.hpp \
        boost/mpl/eval_if.hpp \
        boost/mpl/identity.hpp \
        boost/pool/object_pool.hpp \
        boost/pool/detail/pool_construct.ipp \
        boost/version.hpp
endif
